2.1.0/_sources/gallery/pyplots/fig_axes_labels_simple.rst.txt


.. _sphx_glr_gallery_pyplots_fig_axes_labels_simple.py:


======================
Fig Axes Labels Simple
======================





.. image:: /gallery/pyplots/images/sphx_glr_fig_axes_labels_simple_001.png
    :align: center





.. code-block:: python

    import numpy as np
    import matplotlib.pyplot as plt

    fig = plt.figure()
    fig.subplots_adjust(top=0.8)
    ax1 = fig.add_subplot(211)
    ax1.set_ylabel('volts')
    ax1.set_title('a sine wave')

    t = np.arange(0.0, 1.0, 0.01)
    s = np.sin(2*np.pi*t)
    line, = ax1.plot(t, s, color='blue', lw=2)

    # Fixing random state for reproducibility
    np.random.seed(19680801)

    ax2 = fig.add_axes([0.15, 0.1, 0.7, 0.3])
    n, bins, patches = ax2.hist(np.random.randn(1000), 50,
        facecolor='yellow', edgecolor='yellow')
    ax2.set_xlabel('time (s)')

    plt.show()

**Total running time of the script:** ( 0 minutes  0.052 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: fig_axes_labels_simple.py <fig_axes_labels_simple.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: fig_axes_labels_simple.ipynb <fig_axes_labels_simple.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
